--- a/src/styles/_vars/_bsVariables.scss
+++ b/src/styles/_vars/_bsVariables.scss
@@ -1,4 +1,9 @@
-// scss-docs-start color-variables
+// Variables
+//
+// Variables should follow the `$component-state-property-size` formula for
+// consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
+
+// Color system
 $blue:    #1981E1 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -9,4 +14,3 @@ $yellow:  #ffc107 !default;
 $green:   #10B8BE !default;
 $teal:    #0C979C !default;
 $cyan:    #0dcaf0 !default;
-// scss-docs-end color-variables
