--- a/src/styles/_components/_card.scss
+++ b/src/styles/_components/_card.scss
@@ -32,12 +32,14 @@
 	}
 
 	&--deck {
-		margin-right: -32px;
-		margin-left: -32px;
+		@include media-breakpoint-up("xl") {
+			margin-right: -32px;
+			margin-left: -32px;
 
-		.card {
-			margin-right: 32px;
-			margin-left: 32px;
+			.card {
+				margin-right: 32px;
+				margin-left: 32px;
+			}
 		}
 	}
 
