alterações de formulário

--- a/src/styles/itcssImports/_components.scss
+++ b/src/styles/itcssImports/_components.scss
@@ -2,5 +2,7 @@
 @import "../_components/cover";
 @import "../_components/card";
 @import "../_components/media";
+@import "../_components/modal";
 @import "../_components/form";
 @import "../_components/footer";
+@import "../_components/loading";
