--- a/src/styles/_components/_loading.scss
+++ b/src/styles/_components/_loading.scss
@@ -14,6 +14,15 @@
 	border-top: 6px solid #91b9ff;
 	border-radius: 100%;
 	margin: auto;
-	visibility: hidden;
 	animation: spin 1s infinite linear;
+
+	.btn & {
+		position: absolute;
+		top: .7rem;
+		right: 2rem;
+		width: 1rem;
+		height: 1rem;
+		border-color: #BFD6FF;
+		border-top-color: #99BBF5;
+	}
 }
