--- a/src/styles/itcssImports/_components.scss
+++ b/src/styles/itcssImports/_components.scss
@@ -1,5 +1,6 @@
 @import "../_components/header";
 @import "../_components/cover";
+@import "../_components/carousel";
 @import "../_components/card";
 @import "../_components/media";
 @import "../_components/modal";
