Alerta de formulario para licitacoes

--- a/src/styles/_components/_modal.scss
+++ b/src/styles/_components/_modal.scss
@@ -27,4 +27,11 @@
 		right: __remcalc(15);
 		top: -50px;
 	}
+
+	.alert {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 0 10px;
+	}
 }
